--- a/portfolio/firefighterarproject.html
+++ b/portfolio/firefighterarproject.html
@@ -46,10 +46,10 @@
         <footer>
             <nav class="flex-container">
                 <ul class="footer-nav">
-                    <li><a class="link" href="mailto:jagrundler@gmail.com"><img class="icon" alt="email icon with a link to email me" src="icons/email.svg"></a></li>
-                    <li><a class="link" href="https://www.linkedin.com/in/josie-grundler" target="_blank"><img class="icon" alt="LinkedIn logo icon with a link to my LinkedIn profile" src="icons/linkedin.svg"></a></li>
-                    <li><a class="link" href="https://github.com/jagrundler/jagrundler.github.io/tree/56a098d7578bf7c2153f7bba1464a7c310f4272e/portfolio"><img class="icon" alt="Code icon with a link to the GitHub repository containing the code and files for this website" src="icons/site-code.svg"></a></li>
-                    <li><a class="link" href="resume.html"><img class="icon" alt="Resume icon with a link to the page containing my resume" src="icons/resume.svg"></a></li>
+                    <li><a class="link" href="mailto:jagrundler@gmail.com" title="Email me!"><img class="icon" alt="email icon with a link to email me" src="icons/email.svg"></a></li>
+                    <li><a class="link" href="https://www.linkedin.com/in/josie-grundler" target="_blank" title="My LinkedIn"><img class="icon" alt="LinkedIn logo icon with a link to my LinkedIn profile" src="icons/linkedin.svg"></a></li>
+                    <li><a class="link" href="https://github.com/jagrundler/jagrundler.github.io/tree/master/portfolio" title="My Github and code for this site"><img class="icon" alt="Code icon with a link to the GitHub repository containing the code and files for this website" src="icons/site-code.svg"></a></li>
+                    <li><a class="link" href="resume.html" title="My Resume"><img class="icon" alt="Resume icon with a link to the page containing my resume" src="icons/resume.svg"></a></li>
                 </ul>
             </nav>
         </footer>
